Working styled notifications with SignalR, CSS, HTML + JS

--- a/dotnet/Autobarn.Website/Views/Shared/_Layout.cshtml
+++ b/dotnet/Autobarn.Website/Views/Shared/_Layout.cshtml
@@ -46,6 +46,7 @@
             </div>
         </nav>
     </header>
+    <div id="signalr-notifications"></div>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
